--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -110,7 +110,13 @@ footer {
 .st0 {
     fill: #270F47;
 }
+
 .input-group {
     margin-bottom: 15px;
     text-align: left;
+    padding: auto;
+}
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
 }
