--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -120,3 +120,17 @@ h2 {
     text-align: center;
     margin-bottom: 20px;
 }
+
+#titulo-futbol-1{
+    font-size: 70px;
+    float: left;
+}
+
+#subtitulo-futbol{
+    font-size: 30px;
+    float: left;
+}
+
+.container-tu-reserva{
+    font-size: 30px;
+}
