--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -110,15 +110,39 @@ footer {
 .st0 {
     fill: #270F47;
 }
+.container {
+    background-color: #ffffff;
+    padding: 20px 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    width: 300px;
+    text-align: center;
+}
+
 
 .input-group {
     margin-bottom: 15px;
     text-align: left;
     padding: auto;
 }
+.input-group label {
+    display: block;
+    color: #555;
+    font-size: 0.9em;
+    margin-bottom: 5px;
+}
+
+.input-group input {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #2f2f2f;
+    font-size: 1em;
+}
 h2 {
     text-align: center;
     margin-bottom: 20px;
+    color: #000000;
 }
 
 #titulo-futbol-1{
