--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -155,6 +155,14 @@ h2 {
     float: left;
 }
 
-.container-tu-reserva{
-    font-size: 30px;
+.informacion-reserva{
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #2f2f2f;
+    font-size: 1em;
+    display: block;
+    color: #555;
+    font-size: 0.9em;
+    margin-bottom: 5px;
 }
