--- a/templates/tu-reserva.html
+++ b/templates/tu-reserva.html
@@ -2,38 +2,39 @@
 
 {% block content %}
 
-<div class="container-tu-reserva">
+<div class="container">
     <h2>Tu Reserva</h2>
-    <div>
+    <div class="informacion-reserva">
         <section>
             <label>Nombre: {{nombre}}</label>
         </section>
     </div>
-    <div>
+    <div class="informacion-reserva">
         <section>
             <label for="class">DNI: {{dni}}</label>
         </section>
     </div>
-    <div>
+    <div class="informacion-reserva">
         <section>
             <label for="class">Codigo de reserva: {{codigo_reserva}}</label>
         </section>
     </div>
-    <div>
+    <div class="informacion-reserva">
         <section>
             <label for="class">Sector: {{sector}}</label>
         </section>
     </div>
-    <div>
+    <div class="informacion-reserva">
         <section>
             <label for="class">Cantidad de tickets: {{cantidad_tickets}}</label>
         </section>
     </div>
-    <div>
+    <div class="informacion-reserva">
         <section>
             <label for="class">Total: {{precio_total}}</label>
         </section>
     </div>
+    <button type="button" class="boton-reservar">Cancelar Reserva</button>
 </div>
 
 {% endblock %}
