--- a/static/css/error.css
+++ b/static/css/error.css
@@ -1,6 +1,4 @@
 
-/*     Para guiarse: border: 2px solid green;     */
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tiny5&display=swap');
@@ -11,135 +9,6 @@
 }
 /* ? _____________________________________ */
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #220752;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-
-header {
-    width: 100%;
-    background-color: #220752;
-    padding: 20px 0; 
-    text-align: center;
-}
-
-.contenedor-header {
-    max-width: 1200px;
-    width: 90%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 25px; 
-}
-
-.logo {
-    width: 80px; 
-}
-
-.barra-busqueda {
-    width: 350px; 
-    padding: 12px;
-    font-size: 18px; 
-    border-radius: 15px;
-    border: none;
-    outline: none;
-}
-
-.boton-reservar {
-    padding: 12px 25px; 
-    background-color: #9a4d9b;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-main {
-    flex: 1;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-}
-
-footer {
-    width: 100%;
-    background-color: #220752;
-    padding: 20px 0;
-}
-
-.footer {
-    max-width: 1200px;
-    width: 90%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-}
-
-.contacto, .creadores {
-    text-align: center;
-}
-/* esta seria la otra opcion
-.creadores {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    gap: 40px; 
-}
-
-.columna-creadores{
-    display: flex;
-    flex-direction: column;
-    gap: 10px; 
-}
- */
-
-.contactos {
-    display: flex;
-    gap: 10px;
-}
-
-.logo svg {
-    width: 70px; 
-    height: 70px;
-    fill: #FBE5D8;
-    transition: transform 0.3s ease;
-}
-
-
-.logo:hover svg {
-    transform: scale(1.1);
-    fill: #FFDAB9; 
-}
-
-.st0 {
-    fill: #270F47;
-}
-
-.input-group {
-    margin-bottom: 15px;
-    text-align: left;
-    padding: auto;
-}
-h2 {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-/*mi codigo_______________________________*/
-
-mian {
-    border: 2px solid green;
-}
-
 #imagen {
     width: 100px;
     height: 100px;
@@ -148,26 +17,21 @@ mian {
 #contenido {
     /* border: 2px solid green; */
     margin: 10px;
-
     display: grid;
     place-items: center;
     grid-template-rows: auto 1fr auto auto;
     grid-template-columns: auto;
-    height: auto; /* Ajusta según sea necesario */
-    
+    height: auto;
     color: gray;
 }
 
 #contenido h1 {
     /*border: 2px solid green;*/
-
     font-family: "Tiny5", sans-serif;
     font-size: 3.5em;
-
     grid-row: 1;
     margin: 25px;
     padding: 0;
-
     text-align: center;
 }
 
