--- a/templates/error.html
+++ b/templates/error.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
-{% block css %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/error.css') }}"> <!-- ? Link para enlazar el CSS -->
-{% endblock %}
 
 {% block content %}
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/error.css') }}">
 
 <div id="contenido">
     <h1>4 0 4</h1>
