--- a/templates/error.html
+++ b/templates/error.html
@@ -9,7 +9,7 @@
     <h1>4 0 4</h1>
     <img src="{{ url_for('static', filename='img/gif.gif') }}" alt="gif">
     <p>No encontramos la pagina que estas buscando.</p>
-    <a id="enlace" href="{{ url_for('home.html') }}"> Volver al inicio </a>
+    <a id="enlace" href="{{ url_for('index') }}"> Volver al inicio </a>
 </div>
 
 {% endblock %}
