Agregada la categoria e-sport al home

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <a href="{{url_for('index')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_fiestas.png') }}" alt="Fiestas" class="cat_logo"><h3>Fiestas</h3></a>
     <a href="{{url_for('index')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_teatro.png') }}" alt="Teatro" class="cat_logo"><h3>Teatro</h3></a>
     <a href="{{url_for('index')}}" class="categoria"><img src="{{ url_for('static', filename='img/jp.png') }}" alt="JP" class="cat_logo"><h3>Cultura japonesa</h3></a>
-    <a href="{{url_for('index')}}" class="categoria"><img src="{{ url_for('static', filename='img/logo1.png') }}" alt="Logo" class="cat_logo"><h3>placeholder</h3></a>
+    <a href="{{url_for('index')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_esport.png') }}" alt="Logo" class="cat_logo"><h3>E-sports</h3></a>
     <a href="{{url_for('index')}}" class="categoria"><img src="{{ url_for('static', filename='img/logo1.png') }}" alt="Logo" class="cat_logo"><h3>placeholder</h3></a>
    </div>
 
