--- a/templates/fiestas.html
+++ b/templates/fiestas.html
@@ -20,7 +20,7 @@
                 <p>Los esperamos en El Teatrito - Sarmiento 1752 - CABA</p>
                 <p><strong>Horario:</strong> 23:55hs a 6:00am</p>
                 <p><strong>Ingreso:</strong> Con DNI +18</p>
-                <a id="enlace" href="">Comprar Entrada</a>
+                <a id="enlace" href="{{url_for('Pago')}}">Comprar Entrada</a>
             </div>
             <div class="parte-derecha">
                 <img src="{{ url_for('static', filename='/img/mapa_grim.png') }}" alt="Mapa Fiesta GRIM" class="mapa">
@@ -39,7 +39,7 @@
                 <p>Early, tanda 1 y 2 agotadas! Tanda 3 a la venta! (Link en Bio)</p>
                 <p>Mesas VIP Backstage disponibles!</p>
                 <p><strong>Ubicación:</strong> La Biblioteca - México 524, CABA</p>
-                <a id="enlace" href="">Comprar Entrada</a>
+                <a id="enlace" href="{{url_for('Pago')}}">Comprar Entrada</a>
             </div>
             <div class="parte-derecha">
                 <img src="{{ url_for('static', filename='/img/feba.png') }}" alt="Mapa Fiesta FEBA" class="mapa">
