--- a/templates/musica.html
+++ b/templates/musica.html
@@ -16,7 +16,7 @@
                 <h2>Fecha y hora:</h2><p>Empieza el sáb, 9 nov 2024 21:00 GMT-3</p>
                 <h2>Descripcion</h2><p>El evento dura 2 horas 30 minutos</p>
                 <h2>Cupos</h2><p>Totales: 20</p><p>Disponibles: 7</p>
-                <a id="enlace" href="">Comprar Entrada</a>
+                <a id="enlace" href="{{ url_for('Pago') }}">Comprar Entrada</a>
             </div>
         </div>
         <div id="parte-derecha">
