--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="contenedor-header">
-            <img src="{{ url_for('static', filename='img/logo1.png') }}" alt="Logo" class="logo">
+            <img src="{{ url_for('static', filename='img/logo-br.png') }}" alt="Logo" class="logo">
             <input type="text" placeholder="Buscar" class="barra-busqueda">
             <button class="boton-reservar">Reserva aquí</button>
         </div>
