--- a/templates/cultura_jp.html
+++ b/templates/cultura_jp.html
@@ -52,7 +52,7 @@
                             
                                 <h2>Horarios:</h2><p>Toda la semana de 10:00 a 18:30</p>
 
-                                <a id="enlace" href="">Comprar Entrada</a>
+                                <a id="enlace" href="{{url_for('Pago')}}">Comprar Entrada</a>
 
                         </div>
                         <div id="parte-derecha">
