--- a/FRONT/templates/index.html
+++ b/FRONT/templates/index.html
@@ -9,7 +9,7 @@
     <a href="{{url_for('index')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_teatro.png') }}" alt="Teatro" class="cat_logo"><h3>Teatro</h3></a>
     <a href="{{url_for('cultura_jp')}}" class="categoria"><img src="{{ url_for('static', filename='img/jp.png') }}" alt="JP" class="cat_logo"><h3>Cultura japonesa</h3></a>
     <a href="{{url_for('index')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_esport.png') }}" alt="Logo" class="cat_logo"><h3>E-sports</h3></a>
-    <a href="{{url_for('index')}}" class="categoria"><img src="{{ url_for('static', filename='img/logo1.png') }}" alt="Logo" class="cat_logo"><h3>placeholder</h3></a>
+    <a href="{{url_for('Stand_up')}}" class="categoria"><img src="{{ url_for('static', filename='img/stand_up_icon.png') }}" alt="Logo" class="cat_logo"><h3>Stand-Up</h3></a>
    </div>
 
 
