--- a/FRONT/templates/musica.html
+++ b/FRONT/templates/musica.html
@@ -7,13 +7,13 @@
 
 <div id="contenedor-principal">
     <dev id="banner">
-        <img src="{{ url_for('static', filename='/img/fotomusica.jpeg') }}" alt="foto" id="imagen-arriba">
+        <img src="{{ url_for('static', filename='/img/musica/camilo-concierto.jpeg') }}" alt="foto" id="imagen-arriba">
     </dev>
     <div id="contenedor-secundario">
         <div id="parte-izquierda">
             <div class="texto-izquierda">
-                <h1>FESTIVAL</h1><p>Texto de ejemplo </p>
-                <h2>Fecha y hora:</h2><p>Empieza el sáb, 9 nov 2024 21:00 GMT-3</p>
+                <h1>CAMILO</h1>
+                <h2>Fecha y hora:</h2><p>sáb, 9 nov 2024 21:00 GMT-3</p>
                 <h2>Descripcion</h2><p>El evento dura 2 horas 30 minutos</p>
                 <h2>Cupos</h2><p>Totales: 20</p><p>Disponibles: 7</p>
                 <a id="enlace" href="{{ url_for('Pago') }}">Comprar Entrada</a>
@@ -21,9 +21,9 @@
         </div>
         <div id="parte-derecha">
             <div class="texto-derecha">
-                <h3>Localizacion:</h3><p>Av. Juan Segundo Fernández 20</p>
+                <h3>Localizacion:</h3><p>Movistar Arena</p>
             </div>
-            <img src="{{ url_for('static', filename='/img/mapa.jpg') }}" alt="foto" id="imagen-derecha">
+            <img src="{{ url_for('static', filename='/img/musica/mapa.jpg') }}" alt="foto" id="imagen-derecha">
         </div>
     </div>
 </div>
