--- a/FRONT/templates/eSports.html
+++ b/FRONT/templates/eSports.html
@@ -4,32 +4,44 @@
 
 <link rel="stylesheet" href="{{ url_for('static', filename='/css/eSports.css') }}">
 
-<div class="container">
-    <section class="seccion-1">
-        <div class="Portada">
-            <h1 id="class">Eventos ESports</h1>
-            <p>
-                Reserva tu entrada para los mejores eventos del mundo del gaming.
-                Disfruta viendo a tus jugadores favoritos jugar o inscribete en un torno para jugar con amigos y demostrar tu nivel.
-            </p> 
+<section class = "seccion">
+    <div class = "contenedor">
+        <h1>Eventos ESports</h1>
+        <p id = "texto-inicial">Reserva tu entrada para los mejores eventos del mundo del gaming.
+            Disfruta viendo a tus jugadores favoritos jugar o inscribete en
+             un torneo para jugar con amigos y demostrar tu nivel.</p>
+        <div class = "pagina">
+            <div class = "eventos">
+                <h2>Counter con amigos</h2>
+                <p>Reúne a tus amigos y participa en la vigésima novena edición de UniverseCSGO,
+                     uno de los torneos de Counter-Strike más emocionantes.
+                      Vive la adrenalina de competir en equipo y demuestra quién domina en el campo de batalla.</p>
+                <button href="#">Reserva aqui!</button>
+            </div>
+            <div class = "eventos">
+                <h2>Worlds 2024</h2>
+                <p>Sumérgete en el campeonato mundial de League of Legends,
+                     donde los mejores equipos del mundo luchan por la gloria.
+                      No te pierdas las jugadas más impresionantes y los momentos
+                       inolvidables que solo Worlds puede ofrecer.</p>
+                <button href="#">Reserva aqui!</button>
+            </div>
+            <div class = "eventos">
+                <h2>Valorant champions</h2>
+                <p>Asiste al campeonato de Valorant y presencia el enfrentamiento entre
+                    los jugadores más talentosos de la escena competitiva. Emoción,
+                     precisión y trabajo en equipo se unen en este evento épico.</p>
+                <button href="#">Reserva aqui!</button>
+            </div>
+            <div class = "eventos">
+                <h2>Torneo Fifa</h2>
+                <p>Demuestra tus habilidades futbolísticas en el Torneo FIFA Ultimate.
+                     Compite contra otros fanáticos del fútbol y lleva a tu equipo a la
+                      victoria en el videojuego de fútbol más popular del mundo.</p>
+                <button href="#">Reserva aqui!</button>
+            </div>
         </div>
-    </section>
-
-    <section class="seccion-2">
-        <div class="eventos">
-            <h2>Eventos Disponibles</h2>
-            <ul class="lista_eventos">
-                <li class="elemtos_lista">Counter Strike con amigos</li>
-                <img src="{{ url_for('static', filename='/img/foto-counter.jpg') }}">
-                <br>
-                <a href="#" class="btn1">Reserva Aqui</a>
-                <li class="elemtos_lista">Worlds LOL 2024</li>
-                <img src="{{ url_for('static', filename='/img/worlds-lol.jpg') }}">
-                <br>
-                <a href="#" class="btn1">Reserva Aqui</a>
-            </ul>
-        </div>
-    </section>
-</div>
+    </div>
+</section>
 
 {% endblock %}
