--- a/FRONT/static/css/login.css
+++ b/FRONT/static/css/login.css
@@ -1,3 +1,8 @@
+main {
+    background-image: url(/15-universe/FRONT/static/img/fondo-login.jpg);
+}
+
+
 .contenedor-login {
     max-width: 400px;
     margin: 0 auto;
