--- a/FRONT/templates/login.html
+++ b/FRONT/templates/login.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+<main class="login-main">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 <div class="contenedor-login">
-    <h2>Login</h2>
+    <h2>Iniciar sesion</h2>
     <form>
         <label for="username">Usuario</label>
         <input type="text" id="username" name="username" required>
@@ -17,7 +18,7 @@
         <button type="submit">Iniciar sesion</button>
     </form>
 </div>
-
+</main>   
 <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 {% endblock %}
 
