--- a/FRONT/templates/stand_up.html
+++ b/FRONT/templates/stand_up.html
@@ -4,26 +4,32 @@
 
 <link rel="stylesheet" href="{{ url_for('static', filename='/css/stand_up.css') }}">
 
-<section id="proximos-eventos" class="event-section">
-    <h2>Próximos Eventos</h2>
-    
-    <article class="event">
-        <h3>Comedy Night con Carlos Sánchez</h3>
-        <p><strong>Fecha:</strong> 20 de Noviembre, 2024</p>
-        <p><strong>Lugar:</strong> Teatro La Escalera, CDMX</p>
-        <p><strong>Descripción:</strong> Disfruta de una noche de risas con Carlos Sánchez y otros comediantes invitados.</p>
-        <a id="enlace" href="{{url_for('Pago')}}">Comprar Entrada</a>
-    </article>
-    
-    <article class="event">
-        <h3>Noche de Comedia con Ana López</h3>
-        <p><strong>Fecha:</strong> 5 de Diciembre, 2024</p>
-        <p><strong>Lugar:</strong> Teatro Colón, Monterrey</p>
-        <p><strong>Descripción:</strong> No te pierdas el show de Ana López, una de las comediantes más divertidas del momento.</p>
-        <a id="enlace" href="{{url_for('Pago')}}">Comprar Entrada</a>
-    </article>
-
-</section>
-
+<div id="contenedor-principal">
+    <div id="banner">
+        <img src="{{ url_for('static', filename='/img/el_show_de_franco_escamilla.jpg') }}" alt="foto" id="imagen-arriba">
+    </div>
+    <div id="contenedor-secundario">
+        <div id="parte-izquierda">
+            <div class="texto-izquierda">
+                <h1>Franco Escamilla</h1>
+                <h2>Fecha y hora:</h2>
+                <p>vie, 10 nov 2024 21:00 GMT-3</p>
+                <h2>Descripción</h2>
+                <p>El show dura aproximadamente 2 horas</p>
+                <h2>Cupos</h2>
+                <p>Totales: 100</p>
+                <p>Disponibles: 30</p>
+                <a id="enlace" href="{{ url_for('Pago') }}">Comprar Entrada</a>
+            </div>
+        </div>
+        <div id="parte-derecha">
+            <div class="texto-derecha">
+                <h3>Localización:</h3>
+                <p>Teatro Gran Rex</p>
+            </div>
+            <img src="{{ url_for('static', filename='/img/Teatro-Gran-Rex-Mapa-de-Ubicacion.jpg') }}" alt="foto" id="imagen-derecha">
+        </div>
+    </div>
+</div>
 
 {% endblock %}
