Modifico index.tml home.css mejorando algunos detalles (me falta terminar)

--- a/FRONT/templates/index.html
+++ b/FRONT/templates/index.html
@@ -13,7 +13,7 @@
 </div>
 
 
-<h1>Nuestras recomendaciones</h1>
+<h2 id="texto">Nuestras recomendaciones</h2>
 <div id="recomendaciones">
     <div class="recom">
         <a href="{{url_for('index')}}" class="recomendacion"><img src="{{url_for('static', filename='img/recom_lib.png')}}" class="img_evento" alt=""></a>
