--- a/FRONT/static/css/home.css
+++ b/FRONT/static/css/home.css
@@ -1,27 +1,56 @@
 main{
-    margin: 200px;
     display: block;
+    background-image: url(/static/img/fondologin.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px;
 }
 #categorias {
+
+    /* border: 2px solid green; */
+    background-color: #673acfab;
     display: flex;
-    width: 100%;
+    justify-content: center;
+    align-content: center;
+    padding: 20px;
+    width: 90%;
+    height: auto;
+    border-radius: 20px;
 }
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .categoria {
-    width: 14%;
+    width: 10%;
     margin-top: 0;
+    padding: 10px;
 
 }
 .categoria h3 {
     text-align: center;
 }
+
+#texto {
+    text-align: left;
+}
+
+h2 {
+    color: white;
+}
+
 .cat_logo {
     width: 80%;
     margin-left: 15PX;
-   }
+}
 #recomendaciones {
-    display: block;
-    width: 100%;
+    display: grid;
+    /* border: 2px solid green; */
+    width: auto;
     height: auto;
+    justify-content: center;
 }
 
 .recom {
@@ -41,6 +70,4 @@ main{
 .img_evento {
     width: 300px;
     height: 300px;
-    
-  
 }
