--- a/FRONT/static/css/home.css
+++ b/FRONT/static/css/home.css
@@ -8,7 +8,7 @@ main{
 #categorias {
 
     /* border: 2px solid green; */
-    background-color: #673acfab;
+    background-color: rgba(101, 11, 175, 0.445);
     display: flex;
     justify-content: center;
     align-content: center;
@@ -42,8 +42,14 @@ h2 {
 }
 
 .cat_logo {
-    width: 80%;
-    margin-left: 15PX;
+    width: 50%;
+    height: auto;
+    background-color: white;
+    padding: 10px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    margin-left: 40px;
+
 }
 #recomendaciones {
     display: grid;
