Agregos detalles en el home.css, musica.css

--- a/FRONT/static/css/musica.css
+++ b/FRONT/static/css/musica.css
@@ -97,7 +97,7 @@ h2 {
 
 #enlace {
     padding: 10px 10px; 
-    background-color: #9a4d9b;
+    background-color: #e74c3c;
     border: 2px solid #000000;
     color: #fff;
     font-size: 15px;
