--- a/FRONT/static/css/musica.css
+++ b/FRONT/static/css/musica.css
@@ -96,11 +96,12 @@ h2 {
 /*TODO_________________________________________________________*/
 
 #enlace {
-    padding: 10px 10px; 
+    padding: 10px; 
     background-color: #e74c3c;
     border: 2px solid #000000;
     color: #fff;
     font-size: 15px;
     border-radius: 10px;
+    text-decoration: none;
     cursor: pointer;
 }
