Cambio la imagen del mapa en mi musica.html por el mapa de google maps

--- a/FRONT/templates/musica.html
+++ b/FRONT/templates/musica.html
@@ -23,7 +23,14 @@
             <div class="texto-derecha">
                 <h3>Localizacion:</h3><p>Movistar Arena</p>
             </div>
-            <img src="{{ url_for('static', filename='/img/musica/mapa.jpg') }}" alt="foto" id="imagen-derecha">
+            <aside class="event-map">
+                <iframe 
+                    src="https://maps.google.com/maps?q=Movistar+Arena,+Humboldt+450,+Buenos+Aires&hl=es&t=&z=17&ie=UTF8&iwloc=&output=embed" 
+                    frameborder="0" 
+                    allowfullscreen 
+                    title="Mapa del Movistar Arena">
+                </iframe>
+            </aside>
         </div>
     </div>
 </div>
