--- a/FRONT/static/css/musica.css
+++ b/FRONT/static/css/musica.css
@@ -84,13 +84,23 @@ h2 {
     color: #000000;
 }
 
-#imagen-derecha {
+aside {
     /* border: 2px solid green; */
     display: grid;
     justify-self: center;
     max-width: 80%;
     height: auto;
+    padding: 0;
     border-radius: 20px;
+    overflow: hidden;
+}
+
+aside iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 20px;
+    box-sizing: border-box;
 }
 
 /*TODO_________________________________________________________*/
