Agrego boton login en el base

--- a/FRONT/templates/base.html
+++ b/FRONT/templates/base.html
@@ -14,6 +14,7 @@
             <img src="{{ url_for('static', filename='img/logo-br.png') }}" alt="Logo" class="logo">
             <input type="text" placeholder="Buscar" class="barra-busqueda">
             <a class="boton-reservar" href="{{url_for('Reserva')}}">Consulta tu reserva</a>
+            <a class="boton-reservar" href="{{url_for('login')}}">Login</a>
         </div>
     </header>
     <main>
