--- a/FRONT/static/css/musica.css
+++ b/FRONT/static/css/musica.css
@@ -92,8 +92,7 @@ aside {
     /* border: 2px solid green; */
     display: grid;
     justify-self: center;
-    width: 400px;
-    width: 100%; /* Ajusta el ancho según sea necesario */
+    width: 100%;
     height: 400px;
     padding: 0;
     border-radius: 20px;
