--- a/FRONT/templates/reserva.html
+++ b/FRONT/templates/reserva.html
@@ -6,13 +6,13 @@
     <form id="reservaForm">
         <div class="input-group">
             <label for="reservaId">Número de Reserva</label>
-            <input type="text" id="reservaId" name="reservaId" required>
+            <input type="text" id="reservaId" name="id_reserva" required>
         </div>
         <div class="input-group">
-            <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" name="email" required>
+            <label for="email">Nombre</label>
+            <input type="text" id="nombre" name="nombre" required>
         </div>
-        <button type="button" class="boton-reservar" onclick="consultarReserva()">Consultar</button>
+        <a href="{{url_for('Tu_reserva')}}" type="button" class="boton-reservar" onclick="consultarReserva()">Consultar</a>
     </form>
     <div class="message" id="message"></div>
 </div>
