Añado una variable que verifica si es admin o no y dependiendo de ello muestra la base.html o la admin-base.html en las vistas

--- a/BACK/login_funcional/templates/fiestas.html
+++ b/BACK/login_funcional/templates/fiestas.html
@@ -1,4 +1,9 @@
-{% extends "base.html" %}
+{% if es_admin %}
+    {% extends "admin-base.html" %}
+{% else %}
+    {% extends "base.html" %}
+{% endif %}
+
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='/css/fiestas.css') }}">
 
