--- a/BACK/login_funcional/templates/jardin_japones.html
+++ b/BACK/login_funcional/templates/jardin_japones.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %}
+{% if es_admin %}
+    {% extends "admin-base.html" %}
+{% else %}
+    {% extends "base.html" %}
+{% endif %}
 
 
 {% block content %}
@@ -12,7 +16,7 @@
             <div class="texto-izquierda">
                 <h2>sobre el jardin japones</h2>
                 <div id="descripcion">
-                         <div class="texto">
+                        <div class="texto">
                                 <p> "Me sentiré sumamente complacido si una visita nuestra, aunque sea de corta duración,
                                     nos permite servir de puente [entre Japón y Argentina] para un más estrecho vínculo..."
                                 (Akihito- 15 de mayo de 1967)</p>
@@ -69,6 +73,4 @@
                 
             </div>
         </div>
-       
-
 {% endblock %}
