--- a/BACK/login_funcional/static/css/styles.css
+++ b/BACK/login_funcional/static/css/styles.css
@@ -55,6 +55,12 @@ header {
     border-radius: 10px;
     cursor: pointer;
     text-decoration: none;
+    transition: transform 0.3s ease;
+}
+
+.boton-reservar:hover {
+    transform: scale(1.02);
+    background-color: #ae55af;
 }
 
 main {
