--- a/FRONT/templates/tu-reserva.html
+++ b/FRONT/templates/tu-reserva.html
@@ -6,32 +6,27 @@
     <h2>Tu Reserva</h2>
     <div class="informacion-reserva">
         <section>
-            <label>Nombre: {{nombre}}</label>
+            <label>Nombre del Evento: {{nombre_evento}}</label>
         </section>
     </div>
     <div class="informacion-reserva">
         <section>
-            <label for="class">DNI: {{dni}}</label>
+            <label>Nombre del Comprador: {{nombre_usuario}}</label>
         </section>
     </div>
     <div class="informacion-reserva">
         <section>
-            <label for="class">Codigo de reserva: {{codigo_reserva}}</label>
+            <label for="class">Codigo de reserva: {{id_reserva}}</label>
         </section>
     </div>
     <div class="informacion-reserva">
         <section>
-            <label for="class">Sector: {{sector}}</label>
+            <label for="class">Cantidad de tickets: {{cant_tickets}}</label>
         </section>
     </div>
     <div class="informacion-reserva">
         <section>
-            <label for="class">Cantidad de tickets: {{cantidad_tickets}}</label>
-        </section>
-    </div>
-    <div class="informacion-reserva">
-        <section>
-            <label for="class">Total: {{precio_total}}</label>
+            <label for="class">Total: {{total}}</label>
         </section>
     </div>
     <button type="button" class="boton-reservar">Cancelar Reserva</button>
