Agrego la funcionalidad de crear reservas al momento de hacer el pago mas modificaciones para que funcione de manera correcta (cambio de nombre en la funcion del endpoint reserva de Reserva a reserva)

--- a/BACK/login_funcional/templates/admin-base.html
+++ b/BACK/login_funcional/templates/admin-base.html
@@ -13,7 +13,7 @@
         <div class="contenedor-header">
             <img src="/static/img/logo-br.png" alt="Logo" class="logo">
             <input type="text" placeholder="Buscar" class="barra-busqueda">
-            <a class="boton-reservar" href="{{url_for('Reserva')}}">Consulta tu reserva</a>
+            <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
             <a class="boton-modificar" href=""> Modificar eventos </a> <!-- TODO: aqui va el link a Modificar eventos -->
             <img src="/static/img/admin.png" alt="admin"class="icono_admin"></a>
         </div>
