--- a/BACK/login_funcional/templates/base.html
+++ b/BACK/login_funcional/templates/base.html
@@ -13,7 +13,7 @@
         <div class="contenedor-header">
             <img src="{{ url_for('static', filename='img/logo-br.png') }}" alt="Logo" class="logo">
             <input type="text" placeholder="Buscar" class="barra-busqueda">
-            <a class="boton-reservar" href="{{url_for('Reserva')}}">Consulta tu reserva</a>
+            <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
             <a class="boton-reservar" href="{{url_for('login')}}">Login</a>
         </div>
     </header>
