Arreglo error de sintaxis

--- a/FRONT/templates/index.html
+++ b/FRONT/templates/index.html
@@ -5,7 +5,7 @@
 <div id="categorias">
     <a href="{{url_for('Futbol')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_futbol.png') }}" alt="Futbol" class="cat_logo"><h3>futbol</h3></a>
     <a href="{{url_for('musica')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_conciertos.png') }}" alt="Conciertos" class="cat_logo"><h3>conciertos</h3></a>
-    <a href="{{url_for('Fiesta')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_fiestas.png') }}" alt="Fiestas" class="cat_logo"><h3>Fiestas</h3></a>
+    <a href="{{url_for('fiestas')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_fiestas.png') }}" alt="Fiestas" class="cat_logo"><h3>Fiestas</h3></a>
     <a href="{{url_for('Teatro')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_teatro.png') }}" alt="Teatro" class="cat_logo"><h3>Teatro</h3></a>
     <a href="{{url_for('cultura_jp')}}" class="categoria"><img src="{{ url_for('static', filename='img/jp.png') }}" alt="JP" class="cat_logo"><h3>Cultura japonesa</h3></a>
     <a href="{{url_for('esports')}}" class="categoria"><img src="{{ url_for('static', filename='img/cat_esport.png') }}" alt="Logo" class="cat_logo"><h3>E-sports</h3></a>
