--- a/FRONT/static/css/home.css
+++ b/FRONT/static/css/home.css
@@ -26,8 +26,13 @@ a {
     width: 10%;
     margin-top: 0;
     padding: 0;
-
+    transition: transform 0.3s ease;
 }
+
+.categoria:hover {
+    transform: scale(1.1);
+}
+
 .categoria h3 {
     text-align: center;
 }
