cambio nombre de funcion de Reserva a reserva

--- a/FRONT/templates/reserva.html
+++ b/FRONT/templates/reserva.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h2>Consulta de Reserva</h2>
-    <form action="{{url_for('Reserva')}}" method="post"" id="reservaForm">
+    <form action="{{url_for('reserva')}}" method="post"" id="reservaForm">
         <div class="input-group">
             <label for="id_reserva">Número de Reserva</label>
             <input type="text" id="id_reserva" name="id_reserva" required>
