--- a/FRONT/templates/admin-base.html
+++ b/FRONT/templates/admin-base.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universe</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="icon" href="{{ url_for('static', filename='img/logo-br.png') }}" type="image/x-icon">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin-styles.css') }}">
+    <link rel="icon" href="/static/img/logo-br.png" type="image/x-icon">
 </head>
 <body>
 
     <header>
         <div class="contenedor-header">
-            <img src="{{ url_for('static', filename='img/logo-br.png') }}" alt="Logo" class="logo">
+            <img src="/static/img/logo-br.png" alt="Logo" class="logo">
             <input type="text" placeholder="Buscar" class="barra-busqueda">
             <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
-            <a class="boton-reservar" href="{{url_for('login')}}">Login</a>
+            <a class="boton-modificar" href=""> Modificar eventos </a> <!-- TODO: aqui va el link a Modificar eventos -->
+            <img src="/static/img/admin.png" alt="admin"class="icono_admin"></a>
         </div>
     </header>
     <main>
@@ -46,21 +47,6 @@
                 <p>Santiago Di MAsso</p>
                 <p>Ruy Mori</p>
             </div>
-            <!-- otra opcio -->
-            <!-- <div class="creadores">
-    <div class="columna-creadores">
-        <p>Ignacio Mauel Poli Salvador</p>
-        <p>Sol Yohara Szinvelski</p>
-        <p>Blas Perez</p>
-        <p>Alejandro Cabrera Diaz</p>
-    </div>
-    <div class="columna-creadores">
-        <p>Henry Yahuasi</p>
-        <p>Santiago Di MAsso</p>
-        <p>Ruy Mori</p>
-    </div>
-</div>
--->
         </div>
     </footer>
 </body>
