Creo endpoint /consultar-eventos/<id_evento>, creo vista descripcion_evento.html  junto con su endpoint, y lo conecto con el boton "Mas informacion" de la vista futbol.html (ID= #55, #56)

--- a/FRONT/templates/futbol.html
+++ b/FRONT/templates/futbol.html
@@ -17,7 +17,7 @@
                 <div class = "eventos">
                     <h2>{{evento.nombre_evento}}</h2>
                     <p>{{evento.descripcion}}</p>
-                    <a id="boton_mas_info" href="{{url_for('musica')}}">Más Información</a>
+                    <a id="boton_mas_info" href="{{url_for('Descripcion_evento', id_evento=evento.id_evento)}}">Más Información</a>
                 </div>
             {% endfor %}           
         </div>
