--- a/FRONT/templates/descripcion_evento.html
+++ b/FRONT/templates/descripcion_evento.html
@@ -11,7 +11,7 @@
 
 <div id="contenedor-principal">
     <dev id="banner">
-        <img src="{{ url_for('static', filename='/img/musica/camilo-concierto.jpeg') }}" alt="foto" id="imagen-arriba">
+        <img src="{{ url_for('static', filename='/img/musica/larenga.jpg') }}" alt="foto" id="imagen-arriba">
     </dev>
     <div id="contenedor-secundario">
         <div id="parte-izquierda">
