--- a/FRONT/static/css/conciertos.css
+++ b/FRONT/static/css/conciertos.css
@@ -77,7 +77,7 @@ button:hover {
 }
 
 .eventos:first-child{
-    background-image: url(/static/img/musica/camilo-concierto.jpeg);
+    background-image: url(/static/img/musica/larenga.jpg);
 }
 
 @media (min-width:720px) {
