--- a/FRONT/static/css/conciertos.css
+++ b/FRONT/static/css/conciertos.css
@@ -1,12 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
-* {
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-body {
+main {
     font-family: "Oswald", sans-serif;
     background-image: linear-gradient(
         0deg,
@@ -22,10 +16,16 @@ body {
 
 
 .contenedor{
-    max-width: 1400px;
-    margin: auto;
-    padding: 60px 0px;
-    text-align: center;
+    /* border: 2px solid green; */
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 80%;
+    max-width: 50%;
+}
+
+#texto-inicial {
+    font-size: 21px;
 }
 
 h1{
@@ -44,8 +44,15 @@ p {
     margin: auto;
 }
 
-#texto-inicial {
-    font-size: 21px;
+#boton_mas_info {
+    padding: 10px; 
+    background-color: #e74c3c;
+    border: 2px solid #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 button {
@@ -72,21 +79,8 @@ button:hover {
     margin:12px;
 }
 
-.eventos p{
-    display:none;
-}
-
-.eventos:first-child{
-    background-image: url(/static/img/musica/larenga.jpg);
-}
-
-@media (min-width:720px) {
-
-.pagina {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+.eventos{
+    background-image: url("/static/img/musica/imagen-eventos.avif");
 }
 
 #texto-inicial {
@@ -94,11 +88,22 @@ button:hover {
     margin-bottom: 40px;
 }
 
-.eventos p {
-    display: block;
+.eventos {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    padding: 20px;
+    margin: 30px;
+    row-gap: 15px;
 }
 
-.eventos {
-    padding: 20px;
-}
+#boton_mas_info {
+    padding: 10px; 
+    background-color: #e74c3c;
+    border: 2px solid #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+    text-decoration: none;
+    cursor: pointer;
 }
