--- a/FRONT/static/css/home.css
+++ b/FRONT/static/css/home.css
@@ -88,3 +88,35 @@ h2 {
     width: 300px;
     height: 300px;
 }
+
+#boton_mas_info {
+    padding: 10px; 
+    background-color: #e74c3c;
+    border: 2px solid #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.eventos{
+    background-position: center center;
+    background-size: cover;
+    padding: 30px 50px;
+    border-radius: 15px;
+    margin:12px;
+}
+
+.eventos {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    padding: 20px;
+    margin: 30px;
+    row-gap: 15px;
+}
+
+.eventos{
+    background-image: url("/static/img/musica/imagen-eventos.avif");
+}
