--- a/FRONT/static/css/crear_evento.css
+++ b/FRONT/static/css/crear_evento.css
@@ -71,3 +71,12 @@ button[type="submit"]:hover {
     border-radius: 4px;
     margin-bottom: 1rem;
 }
+
+.success-message {
+    background-color: #28a745;
+    color: white;
+    padding: 10px;
+    margin-top: 10px;
+    text-align: center;
+    border-radius: 5px;
+}
