--- a/FRONT/templates/descripcion_evento.html
+++ b/FRONT/templates/descripcion_evento.html
@@ -4,20 +4,23 @@
     {% extends "base.html" %}
 {% endif %}
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='/css/musica.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='/css/Descripcion_evento.css') }}">
 <div id="contenedor-principal">
     <dev id="banner">
-        <img src="{{ url_for('static', filename='/img/musica/camilo-concierto.jpeg') }}" alt="foto" id="imagen-arriba">
+        <!-- <img src="{{ url_for('static', filename='/img/musica/camilo-concierto.jpeg') }}" alt="foto" id="imagen-arriba"> -->
+        <img src="{{ imagen_url }}" alt="Imagen de {{ nombre_evento }}" class="imagen-arriba"> 
     </dev>
     <div id="contenedor-secundario">
         <div id="parte-izquierda">
             <div class="texto-izquierda">
+
                 <h1>{{nombre_evento}}</h1>
                 <h2>Fecha y hora:</h2><p>{{fecha_hora}}</p>
                 <h2>Descripcion</h2><p>{{descripcion}}</p>
                 <h2>Cupos</h2><p>Totales: {{entradas_totales}}</p><p>Disponibles: {{entradas_disponibles}}</p>
                 <h2>Precio:</h2><p>{{precio_entrada}}</p>
                 <a id="enlace" href="{{ url_for('Pago') }}">Comprar Entrada</a>
+
             </div>
         </div>
         <div id="parte-derecha">
