agrego detalles para las bases

--- a/FRONT/templates/usuarios-base.html
+++ b/FRONT/templates/usuarios-base.html
@@ -13,6 +13,8 @@
         <div class="contenedor-header">
             <a href="{{ url_for('index') }}"> <img src="/static/img/logo-br.png" alt="Logo" class="logo"> </a>
             <input type="text" placeholder="Buscar" class="barra-busqueda">
+            <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
+            <img src="/static/img/icon-user.jpg" alt="admin"class="icono_admin"></a>
         </div>
     </header>
     <main>
