--- a/FRONT/templates/admin-base.html
+++ b/FRONT/templates/admin-base.html
@@ -15,7 +15,7 @@
             <input type="text" placeholder="Buscar" class="barra-busqueda">
             <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
             <a class="boton-modificar" href=""> Modificar eventos </a> <!-- TODO: aqui va el link a Modificar eventos -->
-            <img src="/static/img/admin.png" alt="admin"class="icono_admin"></a>
+            <img src="/static/img/icon-admin.jpg" alt="admin"class="icono_admin"></a>
         </div>
     </header>
     <main>
