--- a/FRONT/templates/descripcion_evento.html
+++ b/FRONT/templates/descripcion_evento.html
@@ -1,8 +1,11 @@
 {% if es_admin %}
     {% extends "admin-base.html" %}
+{% elif sesion_iniciada %}
+    {% extends "usuarios-base.html" %}
 {% else %}
     {% extends "base.html" %}
 {% endif %}
+
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='/css/Descripcion_evento.css') }}">
 <div id="contenedor-principal">
