--- a/FRONT/templates/pago.html
+++ b/FRONT/templates/pago.html
@@ -1,5 +1,7 @@
 {% if es_admin %}
     {% extends "admin-base.html" %}
+{% elif sesion_iniciada %}
+    {% extends "usuarios-base.html" %}
 {% else %}
     {% extends "base.html" %}
 {% endif %}
